--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">We've got what you need!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+          <p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
+            I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
         </div>
       </div>
@@ -127,6 +128,8 @@
   <!-- Publications Section -->
   <section id="publications">
     <div class="container-fluid p-0">
+      <h2 class="text-center mt-0">Publications</h2>
+      <hr class="divider my-4">
       <div class="row no-gutters">
         <!--<div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
@@ -222,10 +225,6 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+82 (2) 880-XXXX</div>
-        </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
@@ -233,12 +232,12 @@
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="https://github.com/HeesunPark26">Heesun's Github</a>
+          <a class="d-block" href="https://github.com/HeesunPark26">Github</a>
         </div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="https://twitter.com/HeesunPark4">Heesun's Twitter</a>
+          <a class="d-block" href="https://twitter.com/HeesunPark4">Twitter</a>
         </div>
       </div>
     </div>
