--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
+          <h2 class="text-white mt-0">About me</h2>
           <hr class="divider light my-4">
           <p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
             I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
