--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   
  
     <!-- CV -->
-  <section class="page-section bg-dark text-white">
+  <section class="page-section bg-dark text-white" id="cv">
     <div class="container text-center">
       <h2 class="mb-4">Curriculum Vitae of Heesun Park</h2>
       <a class="btn btn-light btn-xl" href="https://">Download CV</a>
