--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About me</h2>
           <hr class="divider light my-4">
+          <img src="https://github.com/HeesunPark26/heesunpark26.github.io/heesun_img.JPG" alt="Heesun" width="100">
           <p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
             I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
