--- a/index.html
+++ b/index.html
@@ -79,13 +79,19 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About me</h2>
           <hr class="divider light my-4">
+        </div>
+      </div>
+      <div class="row justify-content-space-around">
           <p>
-            <img src="img/heesun_img.JPG" alt="Heesun" width="100">
+            <img src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
           <p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
             I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
+      </div>
+          <!--<p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
+            I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>-->
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
-        </div>
+
       </div>
     </div>
   </section>
