--- a/index.html
+++ b/index.html
@@ -77,15 +77,16 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">About me</h2>
+          <h2 class="text-black mt-0">About me</h2>
           <hr class="divider light my-4">
         </div>
       </div>
       <div class="row justify-content-space-around">
           <p>
-            <img src="img/heesun_img.JPG" alt="Heesun" width="200">
+            <img style="padding: 0 15px; float: left;" src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
-          <p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
+          <p style="margin-top: 20px;"> </p>
+          <p class="text-black mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
             I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
       </div>
           <!--<p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
