--- a/index.html
+++ b/index.html
@@ -78,19 +78,14 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="text-black mt-0">About me</h2>
-          <hr class="divider light my-4">
-        </div>
-      </div>
-      <div class="row justify-content-space-around">
+          <hr class="divider my-4">
           <p>
-            <img style="padding: 0 15px; float: left;" src="img/heesun_img.JPG" alt="Heesun" width="200">
+            <img src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
-          <p style="margin-top: 20px;"> </p>
           <p class="text-black mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
             I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
+        </div>
       </div>
-          <!--<p class="text-white mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
-            I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>-->
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
 
       </div>
