--- a/index.html
+++ b/index.html
@@ -82,8 +82,14 @@
           <p>
             <img src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
-          <p class="text-black mb-4">I'm a senior undergraduate in the College of Liberal Studies at SNU, majoring in Philosophy and Biology. 
-            I am broadly interested in cognitive neuroscience and consciousness, and how we can better understand how the brain works through computational approaches.</p>
+          <h3 class="text-black mt-0">Education</h3>
+          <p class="text-black mb-4">
+            <ul>
+              <li>B.A., Philosophy & B.S., Biological science Mar, 2014 - Current at Seoul National University</li>
+            </ul>
+          </p>
+          <h3 class="text-black mt-0">Interest</h3>
+          <p class="text-black mb-4"> Emotion / Decision-making / Neuroimaging / Computational Approach </p>
         </div>
       </div>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
