--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p>
             <img src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
-          <h3 class="text-black mt-0">Education</h3>
+          <p class="text-black mt-0"><b>Education</b></p>
           <p class="text-black mb-4">
             <ul>
               <li>B.A., Philosophy & B.S., Biological science Mar, 2014 - Current at Seoul National University</li>
