--- a/index.html
+++ b/index.html
@@ -82,13 +82,11 @@
           <p>
             <img src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
-          <p class="text-black mt-0"><b>Education</b></p>
-          <p class="text-black mb-4">
-            <ul>
-              <li>B.A., Philosophy & B.S., Biological science Mar, 2014 - Current at Seoul National University</li>
-            </ul>
+          <p class="text-black mb-4"><b>Education</b></p>
+          <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science Mar, 2014 - Current
+                at Seoul National University
           </p>
-          <h3 class="text-black mt-0">Interest</h3>
+          <p class="text-black mb-0"><b>Interest</b></p>
           <p class="text-black mb-4"> Emotion / Decision-making / Neuroimaging / Computational Approach </p>
         </div>
       </div>
