--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <section class="page-section bg-dark text-white" id="cv">
     <div class="container text-center">
       <h2 class="mb-4">Curriculum Vitae of Heesun Park</h2>
-      <a class="btn btn-light btn-xl" href="research/CV_HSpark.pdf">Download CV</a>
+      <a class="btn btn-light btn-xl" href="Research/CV_HSpark.pdf">Download CV</a>
     </div>
   </section>
 
