--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <img src="img/heesun_img.JPG" alt="Heesun" width="200">
           </p>
           <p class="text-black mb-0"><b>Education</b></p>
-          <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science Mar, 2014 - Current
-                at Seoul National University
+          <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science(Mar, 2014 - Current)
+                @ Seoul National University
           </p>
           <p class="text-black mb-0"><b>Interest</b></p>
           <p class="text-black mb-4"> Emotion / Decision-making / Neuroimaging / Computational Approach </p>
@@ -235,17 +235,13 @@
       </div>
       <div class="row">
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="heesunpark26@gmail.com">heesunpark26@gmail.com</a>
+          <a class="d-block" href="heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i>heesunpark26@gmail.com</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fab fa-github fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="https://github.com/HeesunPark26">Github</a>
+          <a class="d-block" href="https://github.com/HeesunPark26"><i class="fab fa-github fa-3x mb-3 text-muted"></i>Github</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="https://twitter.com/HeesunPark4">Twitter</a>
+          <a class="d-block" href="https://twitter.com/HeesunPark4"><i class="fab fa-twitter fa-3x mb-3 text-muted"></i>Twitter</a>
         </div>
       </div>
     </div>
