--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       </div>
       <div class="row">
         <div class="col-lg-4 mr-auto text-center">
-          <a class="d-block" href="heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
+          <a class="d-block" href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <a class="d-block" href="https://github.com/HeesunPark26"><i class="fab fa-github fa-3x mb-3 text-muted"></i></a>
