--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About me</a>
+            <a class="nav-link js-scroll-trigger text-black" href="#about">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger text-black" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+            <a class="nav-link js-scroll-trigger text-black" href="#publications">Publications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger text-black" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#cv">CV</a>
+            <a class="nav-link js-scroll-trigger text-black" href="#cv">CV</a>
           </li>
         </ul>
       </div>
