--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-black font-weight-bold">Heesun Park</h1>
+          <p>
+            <img src="img/heesun_img.JPG" alt="Heesun" width="200">
+          </p>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-black-75 font-weight-light mb-5">Undergraduate student at Seoul National University</p>
+          <p class="text-black-75 font-weight-light mb-5">Graduate student at Seoul National University</p>
          <!--<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>-->
         </div>
       </div>
