--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <h2 class="text-center mt-0">Projects</h2>
       <hr class="divider my-4">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
+        <!--<div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <h3 class="h4 mb-2">Sturdy Themes</h3>
@@ -130,7 +130,7 @@
             <h3 class="h4 mb-2">Made with Love</h3>
             <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </section>
