--- a/index.html
+++ b/index.html
@@ -82,13 +82,17 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-black mt-0">About me</h2>
           <hr class="divider my-4">
+        </div>
+        <div class="col-lg-8 text-left">
+          <p class="text-black mb-2"><b>Education</b></p>
+          <p class="text-black mb-3"><b>Seoul National University</b></p>
+          <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
           
-          <p class="text-black mb-0"><b>Education</b></p>
-          <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science(Mar, 2014 - Current)
-                @ Seoul National University
-          </p>
-          <p class="text-black mb-0"><b>Interest</b></p>
-          <p class="text-black mb-4"> Emotion / Decision-making / Neuroimaging / Computational Approach </p>
+          <p class="text-black mb-3"><b>Seoul National University</b></p>
+          <p class="text-black mb-4">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+          
+          <p class="text-black mb-2"><b>Interest</b></p>
+          <p class="text-black mb-4"> Metacognition / Decision-making / Neuroimaging / Computational Modeling </p>
         </div>
       </div>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
