--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- Masthead -->
   <header class="masthead">
     <div class="container h-100">
-      <div class="row h-100 align-items-center justify-content-center text-center">
+      <div class="row h-100 align-items-center justify-content-center text-left">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-black font-weight-bold">Heesun Park</h1>
           <hr class="divider my-4">
@@ -79,7 +79,7 @@
   <section class="page-section bg-primary" id="about">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
+        <div class="col-lg-8 text-left">
           <h2 class="text-black mt-0">About me</h2>
           <hr class="divider my-4">
         </div>
@@ -104,7 +104,7 @@
   <!-- Projects Section -->
   <section class="page-section" id="projects">
     <div class="container">
-      <h2 class="text-center mt-0">Projects</h2>
+      <h2 class="text-left mt-0">Projects</h2>
       <hr class="divider my-4">
       <div class="row">
         <!--<div class="col-lg-3 col-md-6 text-center">
@@ -142,7 +142,7 @@
   <!-- Publications Section -->
   <section id="publications">
     <div class="container-fluid p-0">
-      <h2 class="text-center mt-0">Publications</h2>
+      <h2 class="text-left mt-0">Publications</h2>
       <hr class="divider my-4">
       <div class="row no-gutters">
         <!--<div class="col-lg-4 col-sm-6">
@@ -232,7 +232,7 @@
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
+        <div class="col-lg-8 text-left">
           <h2 class="mt-0">Contact</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Feel free to contact me!</p>
