--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <header class="masthead">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-left">
-        <div class="col-lg-10 align-self-end">
+        <div class="col-lg-8 align-self-end">
           <h1 class="text-uppercase text-black font-weight-bold">Heesun Park</h1>
           <hr class="divider my-4">
           <p>
@@ -92,7 +92,14 @@
           <p class="text-black mb-4">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
           
           <p class="text-black mb-2"><b>Interest</b></p>
-          <p class="text-black mb-4"> Metacognition / Decision-making / Neuroimaging / Computational Modeling </p>
+          <p class="text-black mb-4">
+            <ul>
+              <li>Metacognition</li>
+              <li>Decision-making</li>
+              <li>Neuroimaging</li>
+              <li>Computational Modeling</li>
+            </ul>
+          </p>
         </div>
       </div>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
@@ -104,7 +111,7 @@
   <!-- Projects Section -->
   <section class="page-section" id="projects">
     <div class="container">
-      <h2 class="text-left mt-0">Projects</h2>
+      <h2 class="col-lg-8 text-left mt-0">Projects</h2>
       <hr class="divider my-4">
       <div class="row">
         <!--<div class="col-lg-3 col-md-6 text-center">
@@ -141,8 +148,8 @@
 
   <!-- Publications Section -->
   <section id="publications">
-    <div class="container-fluid p-0">
-      <h2 class="text-left mt-0">Publications</h2>
+    <div class="container">
+      <h2 class="col-lg-8 text-left mt-0">Publications</h2>
       <hr class="divider my-4">
       <div class="row no-gutters">
         <!--<div class="col-lg-4 col-sm-6">
@@ -239,13 +246,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 mr-auto text-center">
+        <div class="col-lg-8 mr-auto text-left">
           <a class="d-block" href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
           <a class="d-block" href="https://github.com/HeesunPark26"><i class="fab fa-github fa-3x mb-3 text-muted"></i></a>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
           <a class="d-block" href="https://twitter.com/HeesunPark4"><i class="fab fa-twitter fa-3x mb-3 text-muted"></i></a>
         </div>
       </div>
