--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 text-left">
-          <p class="text-black mb-2"><b>Education</b></p>
+          <h3 class="text-black mb-2"><b>Education</b></h3>
           <p class="text-black mb-3"><b>Seoul National University</b></p>
           <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
           
           <p class="text-black mb-3"><b>Seoul National University</b></p>
           <p class="text-black mb-4">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
           
-          <p class="text-black mb-2"><b>Interest</b></p>
+          <h3 class="text-black mb-2"><b>Interest</b></h3>
           <p class="text-black mb-4">
             <ul>
               <li>Metacognition</li>
@@ -111,8 +111,10 @@
   <!-- Projects Section -->
   <section class="page-section" id="projects">
     <div class="container">
-      <h2 class="col-lg-8 text-left mt-0">Projects</h2>
-      <hr class="divider my-4">
+      <div class="col-lg-9">
+        <h2 class="text-left mt-0">Projects</h2>
+        <hr class="divider my-4">
+      </div>
       <div class="row">
         <!--<div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
@@ -149,8 +151,10 @@
   <!-- Publications Section -->
   <section id="publications">
     <div class="container">
-      <h2 class="col-lg-8 text-left mt-0">Publications</h2>
-      <hr class="divider my-4">
+      <div class ="col-lg-8">
+        <h2 class="text-left mt-0">Publications</h2>
+        <hr class="divider my-4">
+      </div>
       <div class="row no-gutters">
         <!--<div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
@@ -230,7 +234,7 @@
             </div>
           </a>
         </div> -->
-      </div>
+      </div>      
     </div>
   </section>
 
