--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
   <!-- Projects Section -->
   <section class="page-section" id="projects">
     <div class="container">
-      <div class="col-lg-9">
-        <h2 class="text-left mt-0">Projects</h2>
-        <hr class="divider my-4">
-      </div>
-      <div class="row">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-left">
+          <h2 class="text-black mt-0">Projects</h2>
+          <hr class="divider my-4">
+        </div>
         <!--<div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
@@ -151,11 +151,11 @@
   <!-- Publications Section -->
   <section id="publications">
     <div class="container">
-      <div class ="col-lg-8">
-        <h2 class="text-left mt-0">Publications</h2>
-        <hr class="divider my-4">
-      </div>
-      <div class="row no-gutters">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-left">
+          <h2 class="text-black mt-0">About me</h2>
+          <hr class="divider my-4">
+        </div>
         <!--<div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
@@ -249,7 +249,7 @@
           <p class="text-muted mb-5">Feel free to contact me!</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-8 mr-auto text-left">
           <a class="d-block" href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
           <a class="d-block" href="https://github.com/HeesunPark26"><i class="fab fa-github fa-3x mb-3 text-muted"></i></a>
