--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 text-left">
-          <h3 class="text-black mb-2"><b>Education</b></h3>
+          <h3 class="text-black mb-2">Education</h3>
           <p class="text-black mb-3"><b>Seoul National University</b></p>
           <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
           
           <p class="text-black mb-3"><b>Seoul National University</b></p>
           <p class="text-black mb-4">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
           
-          <h3 class="text-black mb-2"><b>Interest</b></h3>
+          <h3 class="text-black mb-2">Interest</h3>
           <p class="text-black mb-4">
             <ul>
               <li>Metacognition</li>
