--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-left">
-          <h2 class="text-black mt-0">About me</h2>
+          <h2 class="text-black mt-0">Publications</h2>
           <hr class="divider my-4">
         </div>
         <!--<div class="col-lg-4 col-sm-6">
