--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <!-- Masthead -->
   <header class="masthead">
     <div class="container h-100">
-      <div class="row h-100 align-items-center justify-content-center text-left">
-        <div class="col-lg-8 align-self-end">
+      <div class="row h-100 align-items-center justify-content-center text-center">
+        <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-black font-weight-bold">Heesun Park</h1>
           <hr class="divider my-4">
           <p>
@@ -79,27 +79,20 @@
   <section class="page-section bg-primary" id="about">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-left">
+        <div class="col-lg-8 text-center">
           <h2 class="text-black mt-0">About me</h2>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 text-left">
-          <h3 class="text-black mb-2">Education</h3>
+          <p class="text-black mb-2"><b>Education</b></p>
           <p class="text-black mb-3"><b>Seoul National University</b></p>
           <p class="text-black mb-4">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
           
           <p class="text-black mb-3"><b>Seoul National University</b></p>
           <p class="text-black mb-4">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
           
-          <h3 class="text-black mb-2">Interest</h3>
-          <p class="text-black mb-4">
-            <ul>
-              <li>Metacognition</li>
-              <li>Decision-making</li>
-              <li>Neuroimaging</li>
-              <li>Computational Modeling</li>
-            </ul>
-          </p>
+          <p class="text-black mb-2"><b>Interest</b></p>
+          <p class="text-black mb-4"> Metacognition / Decision-making / Neuroimaging / Computational Modeling </p>
         </div>
       </div>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
@@ -111,11 +104,9 @@
   <!-- Projects Section -->
   <section class="page-section" id="projects">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-left">
-          <h2 class="text-black mt-0">Projects</h2>
-          <hr class="divider my-4">
-        </div>
+      <h2 class="text-center mt-0">Projects</h2>
+      <hr class="divider my-4">
+      <div class="row">
         <!--<div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
@@ -150,12 +141,10 @@
 
   <!-- Publications Section -->
   <section id="publications">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-left">
-          <h2 class="text-black mt-0">Publications</h2>
-          <hr class="divider my-4">
-        </div>
+    <div class="container-fluid p-0">
+      <h2 class="text-center mt-0">Publications</h2>
+      <hr class="divider my-4">
+      <div class="row no-gutters">
         <!--<div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
@@ -234,7 +223,7 @@
             </div>
           </a>
         </div> -->
-      </div>      
+      </div>
     </div>
   </section>
 
@@ -243,16 +232,20 @@
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-8 text-left">
+        <div class="col-lg-8 text-center">
           <h2 class="mt-0">Contact</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Feel free to contact me!</p>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-lg-8 mr-auto text-left">
+      <div class="row">
+        <div class="col-lg-4 mr-auto text-center">
           <a class="d-block" href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
+        </div>
+        <div class="col-lg-4 mr-auto text-center">
           <a class="d-block" href="https://github.com/HeesunPark26"><i class="fab fa-github fa-3x mb-3 text-muted"></i></a>
+        </div>
+        <div class="col-lg-4 mr-auto text-center">
           <a class="d-block" href="https://twitter.com/HeesunPark4"><i class="fab fa-twitter fa-3x mb-3 text-muted"></i></a>
         </div>
       </div>
