list of interests

--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
           <p class="text-black mb-4">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
           
           <p class="text-black mb-2"><b>Interest</b></p>
-          <p class="text-black mb-4"> Metacognition / Decision-making / Neuroimaging / Computational Modeling </p>
+          <p class="text-black mb-4"> 
+            <ul>
+              <li>Metacognition</li>
+              <li>Decision-making</li>
+              <li>Neuroimaging</li>
+              <li>Computational Modeling</li>
+            </ul>
+          </p>
         </div>
       </div>
           <!--<a class="btn btn-light btn-xl js-scroll-trigger" href="#cv">Get Started!</a>-->
