--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,5 +2,8 @@
   <div class="featured-posts"
     <h3><span>Feel free to contact me</span></h3>
     <a class="d-block" href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
+    
     <a class="d-block" href="https://github.com/HeesunPark26"><i class="fab fa-github fa-3x mb-3 text-muted"></i></a>
+
     <a class="d-block" href="https://twitter.com/HeesunPark4"><i class="fab fa-twitter fa-3x mb-3 text-muted"></i></a>
+  </div>
