--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,9 @@
-<h2> Contact </h2>
+---
+layout: misc
+title: Contact
+---
+
+
   <div class="featured-posts"
     <h3><span>Feel free to contact me</span></h3>
     <a class="d-block" href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
