--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -4,7 +4,7 @@ title: About me
 ---
 {% for post in site.categories.documentation %}
   <a href="{{ site.github.url }}{{ post.url }}">
-    <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }})"{% endif %}>
+    <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/img/heesun_img)"{% endif %}>
       <h2><span>{{ post.title }}</span></h2>
     </div>
   </a>
