--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -5,7 +5,7 @@ title: About me
 
 
   <p>
-    <img src="https://github.com/HeesunPark26/heesunpark26.github.io/tree/master/img/heesun_img.JPG" alt="Heesun" width="200">
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" width="200">
   </p>
 
 {% for post in site.categories.documentation %}
