--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -12,6 +12,22 @@ title: About me
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
     With neuroscientific and computational approaches, she hopes to understand the relationship between decision making and decision confidence (metacognition).
   </p>
+  <p class="text-black mb-2">Interest</p>
+  <p class="text-black mb-4"> 
+            <ul>
+              <li>Metacognition</li>
+              <li>Decision-making</li>
+              <li>Neuroimaging</li>
+              <li>Computational Modeling</li>
+            </ul>
+  </p>
+  <p class="text-black mb-2"><b>Education</b></p>
+  <p class="text-black mb-3">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
+  <p class="text-black mb-4">Seoul National University</p>
+  <p class="text-black mb-3">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+  <p class="text-black mb-4">Seoul National University</p>
+          
+  <h2>Education</h2>
 
 {% for post in site.categories.documentation %}
   <!--<a href="{{ site.github.url }}{{ post.url }}">-->
