--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -5,12 +5,12 @@ title: About me
 
 <div>
   <p>
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width:100px; margin-right: 20px; margin-bottom: 10px">
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width:200px; margin-right: 20px; margin-bottom: 10px">
   </p>
   <p>
     I am a M.A student studying cognitive psychology at Seoul National University.
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
-    With neuroscientific and computational approaches, she hopes to understand the relationship between decision making and decision confidence (metacognition).
+    With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
   </p>
   <p class="text-black mb-2">Interest</p>
   <p class="text-black mb-4"> 
