--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -12,7 +12,9 @@ title: About me
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
     With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
   </p>
-  <p class="text-black mb-2">Interest</p>
+</div>
+<div>
+  <h2>Interest</h2>
   <p class="text-black mb-4"> 
             <ul>
               <li>Metacognition</li>
@@ -21,13 +23,13 @@ title: About me
               <li>Computational Modeling</li>
             </ul>
   </p>
-  <p class="text-black mb-2"><b>Education</b></p>
+  <h2>Education</h2>
   <p class="text-black mb-3">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
   <p class="text-black mb-4">Seoul National University</p>
   <p class="text-black mb-3">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
   <p class="text-black mb-4">Seoul National University</p>
-          
-  <h2>Education</h2>
+</div>          
+
 
 {% for post in site.categories.documentation %}
   <!--<a href="{{ site.github.url }}{{ post.url }}">-->
