--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -13,6 +13,7 @@ title: About me
     With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
   </p>
 </div>
+<div style = "clear: both;"></div>
 <div>
   <h2>Interest</h2>
   <p class="text-black mb-4"> 
