--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -3,7 +3,7 @@ layout: page
 title: About me
 ---
 
-<div>
+<div style = "font-family:Times New Roman;">
   <p>
     <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width:200px; margin-right: 20px; margin-bottom: 10px">
   </p>
@@ -14,7 +14,7 @@ title: About me
   </p>
 </div>
 <div style = "clear: both;"></div>
-<div>
+<div style = "font-family:Times New Roman;">
   <h2>Interest</h2>
   <p class="text-black mb-4"> 
             <ul>
@@ -29,7 +29,7 @@ title: About me
   <p class="text-black mb-4">Seoul National University</p>
   <p class="text-black mb-3">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
   <p class="text-black mb-4">Seoul National University</p>
-</div>          
+</div style = "font-family:Times New Roman;">          
 
 
 {% for post in site.categories.documentation %}
