--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -16,7 +16,7 @@ title: About me
 <div style = "clear: both;"></div>
 <div style = "font-family:Times New Roman;">
   <h2>Interest</h2>
-  <p class="text-black mb-4"> 
+  <p class="text-black mb-4" style = "font-family:Times New Roman;"> 
             <ul>
               <li>Metacognition</li>
               <li>Decision-making</li>
@@ -29,7 +29,7 @@ title: About me
   <p class="text-black mb-4">Seoul National University</p>
   <p class="text-black mb-3">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
   <p class="text-black mb-4">Seoul National University</p>
-</div style = "font-family:Times New Roman;">          
+</div>          
 
 
 {% for post in site.categories.documentation %}
