--- a/index.html
+++ b/index.html
@@ -2,19 +2,33 @@
 layout: page
 title: About me
 ---
+<style>
+  div {
+    width: 100%;
+  }
+  div.left {
+    width: 35%;
+    float: left;
+  }
+  div.right {
+    width: 65%;
+    float: right;
+  }
+    </style>
 
-<div style = "font-family:Times New Roman;">
+<div class="left">
   <p>
     <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width:200px; margin-right: 20px; margin-bottom: 10px">
   </p>
+</div>
+
+<div class = "right">
   <p>
     I am a M.A student studying cognitive psychology at Seoul National University.
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
     With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
   </p>
-</div>
-<div style = "clear: both;"></div>
-<div style = "font-family:Times New Roman;">
+  
   <h2>Interest</h2>
   <p class="text-black mb-4" style = "font-family:Times New Roman;"> 
             <ul>
