--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -30,7 +30,7 @@ title: About me
   </p>
   
   <h2>Interest</h2>
-  <p class="text-black mb-4" style = "font-family:Times New Roman;"> 
+  <p> 
             <ul>
               <li>Metacognition</li>
               <li>Decision-making</li>
@@ -39,10 +39,10 @@ title: About me
             </ul>
   </p>
   <h2>Education</h2>
-  <p class="text-black mb-3">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
-  <p class="text-black mb-4">Seoul National University</p>
-  <p class="text-black mb-3">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
-  <p class="text-black mb-4">Seoul National University</p>
+  <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
+  <p>Seoul National University</p>
+  <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+  <p>Seoul National University</p>
 </div>          
 
 
