--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,19 +2,8 @@
 layout: page
 title: Contact
 ---
-{% for post in site.categories.documentation %}
-  <a href="{{ site.github.url }}{{ post.url }}">
-    <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }})"{% endif %}>
-      <p>Feel free to contact me</p>
-      <h2><span>{{ post.title }}</span></h2>
-    </div>
-  </a>
-{% endfor %}
-
-
-
-
-<!--Feel free to contact me.-->
+<div>
+  <h2>Feel free to contact me</h2>
 
 <!--[tweet at me](https://twitter.com/intent/tweet?text=My%question%about%Millennial%is:%&amp;via=paululele)-->
 
