--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -18,7 +18,7 @@ title: About me
 
 <div class="left">
   <p>
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width:240px; margin-right: 20px; margin-bottom: 10px">
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 80%; height: auto; margin-right: 20px; margin-bottom: 10px">
   </p>
 </div>
 
