--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -18,12 +18,12 @@ title: About me
 
 <div class="left">
   <p>
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 80%; height: auto; margin-right: 20px; margin-bottom: 10px">
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 60%; height: auto; margin-right: 20px; margin-bottom: 10px">
   </p>
 </div>
 
 <div class = "right">
-  <p>
+  <p style = "font-size: 1rem;" >
     I am a M.A student studying cognitive psychology at Seoul National University.
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
     With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
