--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,14 @@ title: Contact
 ---
 <div>
   <h2>Feel free to contact me</h2>
-
+</div>
+<div>
+  <a class = "fa-envelope" href="mailto:heesunpark26@gmail.com"></a>
+  <a class = "fa-github" href=href="https://twitter.com/HeesunPark4"></a>
+  <a class = "fa-twitter" href="https://twitter.com/HeesunPark4"></a>
+</div>
+  
+  
 <!--[tweet at me](https://twitter.com/intent/tweet?text=My%question%about%Millennial%is:%&amp;via=paululele)-->
 
 <!--[mail to me](mailto:heesunpark26@gmail.com)-->
