--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@ title: Contact
 </div>
 <div>
   <a class = "fa-envelope" href="mailto:heesunpark26@gmail.com"></a>
-  <a class = "fa-github" href=href="https://twitter.com/HeesunPark4"></a>
+  <a class = "fa-github" href="https://github.com/HeesunPark26"></a>
   <a class = "fa-twitter" href="https://twitter.com/HeesunPark4"></a>
 </div>
   
