--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@ title: Home
 
 <div class="left">
   <p>
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width:200px; margin-right: 20px; margin-bottom: 10px">
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 60%; height: auto; margin-right: 20px; margin-bottom: 10px">
   </p>
 </div>
 
 <div class = "right">
-  <p>
+  <p style = "font-size: 1.3rem;" >
     I am a M.A student studying cognitive psychology at Seoul National University.
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
     With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
   </p>
   
   <h2>Interest</h2>
-  <p class="text-black mb-4" style = "font-family:Times New Roman;"> 
+  <p style = "font-size: 1.3rem;"> 
             <ul>
               <li>Metacognition</li>
               <li>Decision-making</li>
@@ -39,12 +39,13 @@ title: Home
             </ul>
   </p>
   <h2>Education</h2>
-  <p class="text-black mb-3">B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
-  <p class="text-black mb-4">Seoul National University</p>
-  <p class="text-black mb-3">M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
-  <p class="text-black mb-4">Seoul National University</p>
+  <div style = "font-size: 1.3rem;">
+    <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
+    <p>Seoul National University</p>
+    <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
+    <p>Seoul National University</p>
+  </div>
 </div>          
-
 
 {% for post in site.categories.documentation %}
   <!--<a href="{{ site.github.url }}{{ post.url }}">-->
