--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,9 +6,9 @@ title: Contact
   <h2>Feel free to contact me</h2>
 </div>
 <div>
-  <a href="mailto:heesunpark26@gmail.com"><i class="fa-envelope"</i></a>
-  <a href="https://twitter.com/HeesunPark4"><i class="fa-twitter"</i></a>
-  <a href="https://github.com/HeesunPark26"><i class="fa-github"</i></a>
+  <a href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope"</i></a>
+  <a href="https://twitter.com/HeesunPark4"><i class="fab fa-twitter"</i></a>
+  <a href="https://github.com/HeesunPark26"><i class="fab fa-github"</i></a>
 </div>
   
   
