--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,9 +6,32 @@ title: Contact
   <h2>Feel free to contact me</h2>
 </div>
 <div>
-  <a href="mailto:heesunpark26@gmail.com"><i class="fas fa-envelope"</i></a>
-  <a href="https://twitter.com/HeesunPark4"><i class="fab fa-twitter"</i></a>
-  <a href="https://github.com/HeesunPark26"><i class="fab fa-github"</i></a>
+  <p>
+    <a href="mailto:heesunpark26@gmail.com">
+      <i class="fas fa-envelope fa-3x"></i>
+      heesunpark26@gmail.com
+    </a>
+  </p>
+  <p>
+    <a href="https://twitter.com/HeesunPark4">
+      <i class="fab fa-twitter fa-3x"></i>
+      HeesunPark4
+    </a>
+  </p>
+  <p>
+    <a href="https://github.com/HeesunPark26">
+      <i class="fab fa-github fa-3x"></i>
+      HeesunPark26
+    </a>
+  </p>
+  <p>
+    <i class="fa fa-phone fa-3x"></i>
+    +82 2 880 6440
+  </p>
+  <p>
+    <i class="fa fa-map-marker fa-3x"></i>
+    Room A107, Building #16, 1 Gwanak-ro, Gwanak-gu, Seoul National University, Seoul, Korea 08826
+  </p>
 </div>
   
   
