--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,19 +8,19 @@ title: Contact
 <div>
   <p>
     <a href="mailto:heesunpark26@gmail.com">
-      <i class="fas fa-envelope fa-3x"></i>
+      <i class="fa fa-envelope fa-3x"></i>
       heesunpark26@gmail.com
     </a>
   </p>
   <p>
     <a href="https://twitter.com/HeesunPark4">
-      <i class="fab fa-twitter fa-3x"></i>
+      <i class="fa fa-twitter fa-3x"></i>
       HeesunPark4
     </a>
   </p>
   <p>
     <a href="https://github.com/HeesunPark26">
-      <i class="fab fa-github fa-3x"></i>
+      <i class="fa fa-github fa-3x"></i>
       HeesunPark26
     </a>
   </p>
