--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,11 +25,11 @@ title: Contact
     </a>
   </p>
   <p>
-    <i class="fa fa-phone fa-3x"></i>
+    <i class="fa fa-phone fa-3x" style="padding-right: 5px;"></i>
     +82 2 880 6440
   </p>
   <p>
-    <i class="fa fa-map-marker fa-3x"></i>
+    <i class="fa fa-map-marker fa-3x" style="padding-right: 5px;"></i>
     Room A107, Building #16, 1 Gwanak-ro, Gwanak-gu, Seoul National University, Seoul, Korea 08826
   </p>
 </div>
