--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,10 +2,10 @@
 layout: page
 title: Contact
 ---
-<div>
+<div style="margin-left: 10%;">
   <h2>Feel free to contact me</h2>
 </div>
-<div>
+<div style="margin-left: 10%;">
   <p>
     <a href="mailto:heesunpark26@gmail.com">
       <i class="fa fa-envelope fa-2x"></i>
