--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,9 +3,9 @@ layout: page
 title: Contact
 ---
 <div style="margin-left: 10%;">
-  <h2>Feel free to contact me</h2>
+  <h2>Feel free to contact me!</h2>
 </div>
-<div style="margin-left: 10%;">
+<div style="margin-left: 15%;">
   <p>
     <a href="mailto:heesunpark26@gmail.com">
       <i class="fa fa-envelope fa-2x"></i>
