--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@ title: Contact
 <div style="margin-left: 5%;">
   <h2>Feel free to contact me!</h2>
 </div>
-<div style="margin-left: 10%;">
+<div style="margin-left: 10%; font-size: 1.3rem;">
   <p>
     <a href="mailto:heesunpark26@gmail.com">
       <i class="fa fa-envelope fa-2x"></i>
