--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -16,7 +16,7 @@ title: About me
   }
     </style>
 
-<div class="left">
+<div class="left" style="margin-left: 5%;">
   <p>
     <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 60%; height: auto; margin-right: 20px; margin-bottom: 10px">
   </p>
