--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -16,21 +16,21 @@ title: About me
   }
     </style>
 
-<div class="left" style="margin-left: 5%;">
+<div class="left">
   <p>
     <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 60%; height: auto; margin-right: 20px; margin-bottom: 10px">
   </p>
 </div>
 
 <div class = "right">
-  <p style = "font-size: 1.3rem;" >
+  <p style = "font-size: 1.2rem;" >
     I am a M.A student studying cognitive psychology at Seoul National University.
     I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. 
     With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
   </p>
   
   <h2>Interest</h2>
-  <p style = "font-size: 1.3rem;"> 
+  <p style = "font-size: 1.2rem;"> 
             <ul>
               <li>Metacognition</li>
               <li>Decision-making</li>
@@ -39,7 +39,7 @@ title: About me
             </ul>
   </p>
   <h2>Education</h2>
-  <div style = "font-size: 1.3rem;">
+  <div style = "font-size: 1.2rem;">
     <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
     <p>Seoul National University</p>
     <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
