--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,28 +8,28 @@ title: Contact
 <div style="margin-left: 10%; font-size: 1.3rem;">
   <p>
     <a href="mailto:heesunpark26@gmail.com">
-      <i class="fa fa-envelope fa-2x"></i>
+      <i class="fa fa-envelope"></i>
       heesunpark26@gmail.com
     </a>
   </p>
   <p>
     <a href="https://twitter.com/HeesunPark4">
-      <i class="fa fa-twitter fa-2x"></i>
+      <i class="fa fa-twitter"></i>
       HeesunPark4
     </a>
   </p>
   <p>
     <a href="https://github.com/HeesunPark26">
-      <i class="fa fa-github fa-2x"></i>
+      <i class="fa fa-github"></i>
       HeesunPark26
     </a>
   </p>
   <p>
-    <i class="fa fa-phone fa-2x" style="padding-right: 5px;"></i>
+    <i class="fa fa-phone" style="padding-right: 5px;"></i>
     +82 2 880 6440
   </p>
   <p>
-    <i class="fa fa-map-marker fa-2x" style="padding-right: 5px;"></i>
+    <i class="fa fa-map-marker" style="padding-right: 5px;"></i>
     Room A107, Building #16, 1 Gwanak-ro, Gwanak-gu, Seoul National University, Seoul, Korea 08826
   </p>
 </div>
