--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,19 +7,19 @@ title: Contact
 </div>
 <div style="margin-left: 10%; font-size: 1.3rem;">
   <p>
-    <a href="mailto:heesunpark26@gmail.com">
+    <a style="text-decoration:none" href="mailto:heesunpark26@gmail.com">
       <i class="fa fa-envelope fa-2x"></i>
       heesunpark26@gmail.com
     </a>
   </p>
   <p>
-    <a href="https://twitter.com/HeesunPark4">
+    <a style="text-decoration:none" href="https://twitter.com/HeesunPark4">
       <i class="fa fa-twitter fa-2x"></i>
       HeesunPark4
     </a>
   </p>
   <p>
-    <a href="https://github.com/HeesunPark26">
+    <a style="text-decoration:none" href="https://github.com/HeesunPark26">
       <i class="fa fa-github fa-2x"></i>
       HeesunPark26
     </a>
