--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class="col-xs-12 col-md-4">
   <p>
-    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 60%; height: auto; margin-right: 20px; margin-bottom: 10px">
+    <img src="https://heesunpark26.github.io/img/heesun_img.JPG" alt="Heesun" style = "float:left; width: 200px; height: auto; margin-right: 20px; margin-bottom: 10px">
   </p>
 </div>
 
