--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,32 +6,33 @@ title: Contact
   <h2>Feel free to contact me!</h2>
 </div>
 <div style="margin-left: 10%; font-size: 1.3rem;">
-  <p>
-    <a style="text-decoration:none" href="mailto:heesunpark26@gmail.com">
+  <ul class="fa-ul">
+    <li>
       <i class="fa fa-envelope fa-2x"></i>
-      heesunpark26@gmail.com
-    </a>
-  </p>
-  <p>
-    <a style="text-decoration:none" href="https://twitter.com/HeesunPark4">
+      <a style="text-decoration:none" href="mailto:heesunpark26@gmail.com">
+        heesunpark26@gmail.com
+      </a>
+    </li>
+    <li>
       <i class="fa fa-twitter fa-2x"></i>
-      HeesunPark4
-    </a>
-  </p>
-  <p>
-    <a style="text-decoration:none" href="https://github.com/HeesunPark26">
+      <a style="text-decoration:none" href="https://twitter.com/HeesunPark4">
+        HeesunPark4
+      </a>
+    </li>
+    <li>
       <i class="fa fa-github fa-2x"></i>
-      HeesunPark26
-    </a>
-  </p>
-  <p>
-    <i class="fa fa-phone fa-2x" style="padding-right: 5px;"></i>
-    +82 2 880 6440
-  </p>
-  <p>
-    <i class="fa fa-map-marker fa-2x" style="padding-right: 5px;"></i>
-    Room A107, Building #16, 1 Gwanak-ro, Gwanak-gu, Seoul National University, Seoul, Korea 08826
-  </p>
+      <a style="text-decoration:none" href="https://github.com/HeesunPark26">
+        HeesunPark26
+      </a>
+    </li>
+    <li>
+      <i class="fa fa-phone fa-2x"></i>
+        +82 2 880 6440
+    </li>
+    <li>
+      <i class="fa fa-map-marker fa-2x"></i>
+        Room A107, Building #16, 1 Gwanak-ro, Gwanak-gu, Seoul National University, Seoul, Korea 08826
+    </li>
 </div>
   
   
