--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ title: About me
     </p>
     <div class="col-sm-5" style="clear: both">
       <h2>Interest</h2>
-      <div class="contents"> 
-        <ul>
+      <div> 
+        <ul class="contents">
           <li>Metacognition</li>
           <li>Decision-making</li>
           <li>Neuroimaging</li>
@@ -40,13 +40,15 @@ title: About me
         </ul>
       </div>
     </div>
-    <div class="col-sm-7" style="clear: both">
+    <div class="col-sm-7">
       <h2>Education</h2>
-      <div class="contents">
-        <p>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</p>
-        <p>Seoul National University</p>
-        <p>M.A., Cognitive Psychology (Mar, 2020 - Current)</p>
-        <p>Seoul National University</p>
+      <div>
+        <p class="contents">
+          <br>B.A., Philosophy & B.S., Biological science (Mar, 2014 - Feb, 2020)</br>
+          <br>Seoul National University</br>
+          <br>M.A., Cognitive Psychology (Mar, 2020 - Current)</br>
+          <br>Seoul National University</br>
+        </p>
       </div>
     </div>
   </div>          
