--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: About me
     padding-left: 15px;
   }
   .contents {
-    font-family: 'Merriweather', serif;
+    font-family: Georgia, 'Times New Roman', serif;
   }
 ul, ol, dl {
   margin-top: 0;
