--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ ul.ul-edu li .description p.institution {
       <div class="col-sm-5" style="clear: both">
         <h2>Interest</h2>
         <div> 
-          <ul class="interest contents">
+          <ul class="ul-interests contents">
             <li>Metacognition</li>
             <li>Decision-making</li>
             <li>Neuroimaging</li>
