--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@ layout: page
 title: About me
 ---
 <style>
+  .col-sm-5 {
+    margin-top:1rem;
+    margin-bottom: 1rem;
+  }
+  .col-sm-7 {
+    margin-top:1rem;
+    margin-bottom: 1rem;
+  }
   .col-md-4 {
     min-height: 1px;
     padding-right: 15px;
