--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title: About me
 ---
 <style>
   .col-sm-5 {
-    margin-top:1rem;
-    margin-bottom: 1rem;
+    padding-top:1rem;
+    padding-bottom: 1rem;
   }
   .col-sm-7 {
-    margin-top:1rem;
-    margin-bottom: 1rem;
+    padding-top:1rem;
+    padding-bottom: 1rem;
   }
   .col-md-4 {
     min-height: 1px;
@@ -46,7 +46,7 @@ ul.ul-edu li .description p {
 }
 
 ul.ul-edu li .description p.course {
-  font-size: 1.1rem;
+  font-size: 1.0rem;
 }
 
 ul.ul-edu li .description p.institution {
