--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ title: About me
     padding-right: 15px;
     padding-left: 15px;
   }
+  .contents {
+    font-family: Cambria, 'Cambria', serif;
+  }
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem;
