--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@ layout: single
 author_profile: true
 ---
 
-## About Me
+<h2>About me</h2>
+<p>
 I am a M.A student studying cognitive psychology at Seoul National University. I am broadly interested in understanding neural mechanisms underlying decision making and applying computational modeling to cognitive psychology research. With neuroscientific and computational approaches, I hope to understand the relationship between decision making and decision confidence (metacognition).
+</p>
 
-## Research Interests
-- Cognitive/Computational Modeling
-- Reinforcement Learning
-- Metacognition
-- Neuroimaging
+<h2>Research Interests</h2>
 
-## Education
-- M.A., Cognitive Psychology (Mar, 2020 - Current) @ Seoul National University
-- B.A., Philosophy & B.S., Biological Science (Mar, 2014 - Feb, 2020) @ Seoul National University
+<li>Cognitive/Computational Modeling</li>
+<li>Reinforcement Learning</li>
+<li>Metacognition</li>
+<li>Neuroimaging</li>
+
+<h2>Education</h2>
+
+<li>M.A., Cognitive Psychology (Mar, 2020 - Current) @ Seoul National University</li>
+<li>B.A., Philosophy & B.S., Biological Science (Mar, 2014 - Feb, 2020) @ Seoul National University</li>
